# geokapti

./: README.md  docker-compose.yaml
distances-service/: Dockerfile  pyproject.toml
distances-service/app/: main.py
distances-service/app/api/v1/: distances.py
distances-service/app/core/: database.py  exceptions.py
distances-service/app/external_services/: celery.py  location.py
distances-service/app/schemas/: distance.py  location.py  locations.py  task.py
distances-service/app/utils/: haversine.py
distances-service/tests/: conftest.py  test_celery.py  test_haversine_formla.py
locations-service/: Dockerfile  pyproject.toml
locations-service/app/: main.py
locations-service/app/api/: deps.py  health.py
locations-service/app/api/v1/: locations.py
locations-service/app/core/: database.py  exceptions.py  logger.py
locations-service/app/models/: locations.py
locations-service/app/schemas/: location.py
locations-service/tests/: conftest.py  pytest.ini  test_locations.py
nginx/: nginx.conf
